Digital Clock in Javascript

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <title>Digital Clock</title>
   </head>
-  <body style="background-color: rgb(6, 10, 31">
+  <body style="background-color: rgb(6, 10, 31);">
     <div id="clock">
     <h1>The Time Is Now</h1>
     <div id="time">
